--- a/unicredit-zaba-returns-analysis.ipynb
+++ b/unicredit-zaba-returns-analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e16155c7-d428-4d2d-b803-b2e415070c20",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "96b5b6b5-d776-4c84-8b3b-ba935cbcf719",
    "metadata": {},
    "outputs": [
@@ -239,13 +239,13 @@
        "[2543 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ucg = pd.read_csv('ucg.csv', header=0, skiprows=[1,2])\n",
+    "ucg = pd.read_csv('data/ucg.csv', header=0, skiprows=[1,2])\n",
     "ucg"
    ]
   },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "17eef700-b5d0-41c6-8d00-cb44759a4fbf",
    "metadata": {},
    "outputs": [
@@ -573,13 +573,13 @@
        "[2402 rows x 16 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zaba = pd.read_csv(\"XZAG-SecurityHistory-HRZABARA0009-2015-01-01 - 2025-01-01.csv\", sep=\";\")\n",
+    "zaba = pd.read_csv(\"data/XZAG-SecurityHistory-HRZABARA0009-2015-01-01 - 2025-01-01.csv\", sep=\";\")\n",
     "zaba"
    ]
   },
